--- a/crawling.ipynb
+++ b/crawling.ipynb
@@ -18,7 +18,8 @@
     "    ▶ 해결방안 - response.encoding = 'UTF-8'\n",
     " #### 9) csv파일 읽을시 에러발생\n",
     "    ▶ 증     상 - error 코드 - UnicodeDecodeError: 'utf-8' codec can't decode byte 0xb0 in position 0: invalid start byte\n",
-    "    ▶ 해결방안 - encoding='CP949')\n"
+    "    ▶ 해결방안 - encoding='CP949')\n",
+    "    1차 입니다.\n"
    ]
   },
   {
